--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Unzip project
-        run: unzip BankNotifySimulator.zip
-
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -22,15 +19,13 @@ jobs:
           java-version: '17'
 
       - name: Grant execute permission
-        run: chmod +x BankNotifySimulator/gradlew
+        run: chmod +x gradlew
 
       - name: Build Debug APK
-        run: |
-          cd BankNotifySimulator
-          ./gradlew assembleDebug
+        run: ./gradlew assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: app-debug
-          path: BankNotifySimulator/app/build/outputs/apk/debug/app-debug.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
